replace tab labels with icons so they dont overflow on mobile, conditionally render stats tabs, attempt to fix mobile scrolling issue on stats page

--- a/src/styles/components/TeamOverview.scss
+++ b/src/styles/components/TeamOverview.scss
@@ -2,7 +2,6 @@
 {
   display: flex;
   height: 100%;
-  overflow: auto;
   
   @media (max-width: $small-screen)
   {
